--- a/src/TFSBuildNotifier/TFSBuildNotifier.csproj
+++ b/src/TFSBuildNotifier/TFSBuildNotifier.csproj
@@ -38,10 +38,13 @@
       <HintPath>packages\Hardcodet.NotifyIcon.Wpf.1.0.8\lib\net45\Hardcodet.Wpf.TaskbarNotification.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -123,6 +126,7 @@
     </Resource>
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="readme.txt" />
     <Content Include="Resources\StatusHelp_256x.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
