Getting ready for autolaunch!

--- a/src/TFSBuildNotifier/TFSBuildNotifier.csproj
+++ b/src/TFSBuildNotifier/TFSBuildNotifier.csproj
@@ -63,6 +63,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="MenuItemHelper.cs" />
     <Compile Include="Resource.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
