--- a/src/TFSBuildNotifier/packages.config
+++ b/src/TFSBuildNotifier/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net45" />
+  <package id="ILMerge" version="2.14.1208" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
 </packages>
